Reorganize repro with prebuilt indexes (#2861)
+ rename msmarco-v2.1 to msmarco-v2.1-doc
+ create new repro msmarco-v2.1-doc-segmented